# receipt-order

./: .gitignore  README.md  note.md  pyproject.toml  test.py
app/: __init__.py  config.py  constant.py  data.py  main.py  models.py  notes_modal.py  order_number_modal.py  persistence.py  printer.py  receipt_app.py  rendering.py
data/: mock_receipt.db  receipt.db
receipt_order_textual.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
