[project]
name = "receipt-order-textual"
version = "0.1.0"
description = "Restaurant order taking system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.58,<1.0",
  "pillow>=10.0.0",
  "python-escpos>=3.1",
]

[project.scripts]
order = "app.main:main"
receipt-order = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
